Hide scrollbar. fix

--- a/markup/static/scss/common.scss
+++ b/markup/static/scss/common.scss
@@ -7,6 +7,11 @@ html, body {
         height: 2500px; // Hack for iOS
     }
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 #game {
     background: black;
     & canvas {
